--- a/public/broadcaster.html
+++ b/public/broadcaster.html
@@ -17,30 +17,47 @@
         .then(stream => {
             document.getElementById("localVideo").srcObject = stream;
             stream.getTracks().forEach(track => pc.addTrack(track, stream));
-        });
+        })
+        .catch(err => console.error("getUserMedia 오류:", err));
+
 
         // ICE 후보 전송
         pc.onicecandidate = event => {
             if (event.candidate) {
+                console.log("브로드캐스터 candidate:", event.candidate);
                 socket.emit("candidate", event.candidate);
             }
         };
 
-        // 방송자가 offer 생성
-        pc.createOffer()
-        .then(offer => pc.setLocalDescription(offer))
-        .then(() => {
-            socket.emit("offer", pc.localDescription);
-        });
+        pc.oniceconnectionstatechange = () => {
+            console.log("브로드캐스터 ICE 상태:", pc.iceConnectionState);
+        };
 
         // 시청자가 answer 보냈을 때 (아니 계속 틀렸음... 받아야 되는 임)
         socket.on("answer", (answer) => {
             pc.setRemoteDescription(new RTCSessionDescription(answer));     
         });
 
-        socket.on("candidate", (candidate) => {
-            pc.addIceCandidate(new RTCIceCandidate(candidate)); // ICE는 가능한 모든 연결 경로(네트워크 후보, Candidate) 를 찾아서 가장 잘 통하는 경로로 연결해 주는 역할을 함
+        // 시청자가 들어왔을 때 offer 생성
+        socket.on("requestOffer", () => {
+            pc.createOffer()
+            .then(offer => pc.setLocalDescription(offer))
+            .then(() => {
+                socket.emit("offer", pc.localDescription);
+                console.log("브로드캐스터 offer 전송");
+            });
         });
+
+        // 시청자 후보 처리
+        socket.on("candidate", (candidate) => {
+            if(candidate){
+                pc.addIceCandidate(new RTCIceCandidate(candidate))
+                .catch(e => console.error("ICE candidate 추가 실패:", e));
+            }
+        });
+
+  
+        // ICE는 가능한 모든 연결 경로(네트워크 후보, Candidate) 를 찾아서 가장 잘 통하는 경로로 연결해 주는 역할을 함
     </script>
 </body>
 </html>
