[Style✏️] 웹 브라우저 자동 재생 거부 현상 관련 주석

--- a/public/broadcaster.html
+++ b/public/broadcaster.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h2>Chzzk</h2>
-    <video id="localVideo" autoplay playsinline muted></video>
+    <video id="localVideo" autoplay playsinline></video>
     <script src="/socket.io/socket.io.js"></script>
     <script>
         const socket = io();
